--- a/core/build.gradle
+++ b/core/build.gradle
@@ -182,10 +182,11 @@ configure(core) {
     dependencies {
         compile(api)
         compile(group: 'commons-logging', name: 'commons-logging', version: '1.2')
-        compile(group: 'org.apache.commons', name: 'commons-lang3', version: '3.5')
-        compile(group: 'commons-io', name: 'commons-io', version: '2.5')
-        compile(group: 'org.dom4j', name: 'dom4j', version: '2.1.0')
-        compile(group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25')
+        compile(group: 'org.apache.commons', name: 'commons-lang3', version: '3.9')
+        compile(group: 'commons-io', name: 'commons-io', version: '2.6')
+        compile(group: 'org.dom4j', name: 'dom4j', version: '2.1.1')
+        compile(group: 'com.google.guava', name: 'guava', version: '28.0-jre')
+        compile(group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26')
         compile(group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.12')
         compile(group: 'antlr', name: 'antlr', version: '2.7.7')
         compile(group: 'org.antlr', name: 'antlr-runtime', version: '3.2')
@@ -204,8 +205,8 @@ configure(core) {
         compile(group: "org.apache.xmlgraphics", name: "batik-svggen", version: "1.10")
         compile(group: "org.apache.xmlgraphics", name: "batik-awt-util", version: "1.10")
         compile(group: "org.apache.xmlgraphics", name: "batik-css", version: "1.10")
-        compile(group: "xalan", name: "xalan", version: "2.7.1")
-        compile(group: "xalan", name: "serializer", version: "2.7.1")
+        compile(group: "xalan", name: "xalan", version: "2.7.2")
+        compile(group: "xalan", name: "serializer", version: "2.7.2")
         compile(group: "com.lowagie", name: "itext", version: "2.1.7") {
             exclude(group: 'org.bouncycastle', module: 'bctsp-jdk14')
             exclude(group: 'org.bouncycastle', module: 'bcprov-jdk14')
@@ -214,12 +215,12 @@ configure(core) {
             exclude(group: 'bouncycastle', module: 'bcprov-jdk14')
             exclude(group: 'bouncycastle', module: 'bctsp-jdk14')
         }
-        compile(group: 'org.apache.poi', name: 'poi', version: '3.17')
-        compile(group: 'org.apache.poi', name: 'poi-scratchpad', version: '3.9') {
+        compile(group: 'org.apache.poi', name: 'poi', version: '4.1.0')
+        compile(group: 'org.apache.poi', name: 'poi-scratchpad', version: '4.1.0') {
             exclude(group: 'org.apache.poi', module: 'poi')
         }
-        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.1.16')
-        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.1.16') {
+        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.1.18')
+        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.1.18') {
             exclude(group: 'org.bouncycastle', module: 'bctsp-jdk14')
             exclude(group: 'org.bouncycastle', module: 'bcprov-jdk14')
             exclude(group: 'org.bouncycastle', module: 'bcmail-jdk14')
@@ -227,38 +228,39 @@ configure(core) {
             exclude(group: 'bouncycastle', module: 'bcprov-jdk14')
             exclude(group: 'bouncycastle', module: 'bctsp-jdk14')
         }
-        compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-core', version: '0.0.1-RC19') {
+        compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-core', version: '1.0.0') {
             exclude(group: 'junit', module: 'junit')
         }
-        compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-rtl-support', version: '0.0.1-RC19')
-        compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-pdfbox', version: '0.0.1-RC19') {
+        compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-rtl-support', version: '1.0.0')
+        compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-pdfbox', version: '1.0.0') {
             exclude(group: 'junit', module: 'junit')
         }
-        compile(group: "org.docx4j", name: "docx4j", version: "6.1.0") {
+        compile(group: "org.docx4j", name: "docx4j-JAXB-Internal", version: "8.1.2")
+        compile(group: "org.docx4j", name: "docx4j-core", version: "8.1.2") {
             exclude(group: 'org.apache.poi', module: 'poi')
             exclude(group: 'junit', module: 'junit')
             exclude(group: 'log4j', module: 'log4j')
             exclude(group: 'org.slf4j', module: 'slf4j-log4j12')
             exclude(group: 'com.fasterxml.jackson.core')
         }
-        compile(group: "org.docx4j", name: "docx4j-ImportXHTML", version: "6.1.0") {
+        compile(group: "org.docx4j", name: "docx4j-ImportXHTML", version: "8.0.0") {
             exclude(group: 'junit', module: 'junit')
             exclude(group: 'org.apache.poi', module: 'poi')
             exclude(group: 'log4j', module: 'log4j')
             exclude(group: 'org.slf4j', module: 'slf4j-log4j12')
             exclude(group: 'com.fasterxml.jackson.core')
         }
-        compile(group: "org.docx4j", name: "docx4j-export-fo", version: "6.1.0") {
+        compile(group: "org.docx4j", name: "docx4j-export-fo", version: "8.1.2") {
             exclude(group: 'junit', module: 'junit')
             exclude(group: 'log4j', module: 'log4j')
             exclude(group: 'org.slf4j', module: 'slf4j-log4j12')
             exclude(group: 'com.fasterxml.jackson.core')
         }
-        compile(group: "org.jsoup", name: "jsoup", version: "1.10.3")
-        compile(group: "com.jayway.jsonpath", name: "json-path", version: "2.1.0")
-        compile(group: "com.opencsv", name: "opencsv", version: "3.10")
+        compile(group: "org.jsoup", name: "jsoup", version: "1.12.1")
+        compile(group: "com.jayway.jsonpath", name: "json-path", version: "2.4.0")
+        compile(group: "com.opencsv", name: "opencsv", version: "4.6")
         compile group: 'org.olap4j', name: 'olap4j', version: '1.2.0'
-        compile(group: "net.sf.jasperreports", name: "jasperreports", version: "6.7.0") {
+        compile(group: "net.sf.jasperreports", name: "jasperreports", version: "6.9.0") {
             exclude(group: 'org.apache.lucene')
             exclude(group: 'commons-beanutils', module: 'commons-beanutils')
             exclude(group: 'com.google.zxing', module: 'core')
@@ -275,8 +277,8 @@ configure(core) {
         testCompile(group: 'com.h2database', name: 'h2', version: '1.4.196')
         testCompile(group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3')
         testCompile(group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4')
-        testCompile(group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.2')
-        testCompile(group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.2')
+        testCompile(group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.9.2')
+        testCompile(group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.9')
     }
 
     test {
