Use reference JAXB implementation with docx4j 8.1.2 #117

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -235,9 +235,7 @@ configure(core) {
         compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-pdfbox', version: '1.0.0') {
             exclude(group: 'junit', module: 'junit')
         }
-        compile(group: "org.docx4j", name: "docx4j-JAXB-Internal", version: "8.1.2")
-        compile(group: "org.docx4j", name: "docx4j-core", version: "8.1.2") {
-            exclude(group: 'org.apache.poi', module: 'poi')
+        compile(group: "org.docx4j", name: "docx4j-JAXB-ReferenceImpl", version: "8.1.2") {
             exclude(group: 'junit', module: 'junit')
             exclude(group: 'log4j', module: 'log4j')
             exclude(group: 'org.slf4j', module: 'slf4j-log4j12')
