--- a/core/build.gradle
+++ b/core/build.gradle
@@ -273,6 +273,7 @@ configure(core) {
 
         testCompile(group: 'org.jmockit', name: 'jmockit', version: '1.15')
         testCompile(group: 'junit', name: 'junit', version: '4.5')
+        testCompile group: 'org.mockito', name: 'mockito-core', version: '3.2.4'
         testCompile(group: 'com.h2database', name: 'h2', version: '1.4.196')
         testCompile(group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3')
         testCompile(group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4')
