--- a/core/build.gradle
+++ b/core/build.gradle
@@ -269,6 +269,7 @@ configure(core) {
             exclude(group: 'com.lowagie', module: 'itext')
             exclude(group: 'org.codehaus.castor', module: 'castor-xml')
         }
+        compile(group: "net.sf.jasperreports", name: "jasperreports-fonts", version: "6.8.0")
 
         testCompile(group: 'org.jmockit', name: 'jmockit', version: '1.15')
         testCompile(group: 'junit', name: 'junit', version: '4.5')
