--- a/core/build.gradle
+++ b/core/build.gradle
@@ -184,7 +184,10 @@ configure(core) {
         compile(group: 'commons-logging', name: 'commons-logging', version: '1.2')
         compile(group: 'org.apache.commons', name: 'commons-lang3', version: '3.9')
         compile(group: 'commons-io', name: 'commons-io', version: '2.6')
-        compile(group: 'org.dom4j', name: 'dom4j', version: '2.1.1')
+        compile(group: 'org.dom4j', name: 'dom4j', version: '2.1.3') {
+            exclude (group: 'xpp3', module: 'xpp3')
+            exclude (group: 'pull-parser', module: 'pull-parser')
+        }
         compile(group: 'com.google.guava', name: 'guava', version: '28.0-jre')
         compile(group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26')
         compile(group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.12')
