--- a/core/build.gradle
+++ b/core/build.gradle
@@ -199,6 +199,11 @@ configure(core) {
         compile(group: 'org.openoffice', name: 'unoil', version: '3.0.0')
         compile(group: "org.apache.avalon.framework", name: "avalon-framework-api", version: '4.3.1')
         compile(group: "org.apache.avalon.framework", name: "avalon-framework-impl", version: '4.3.1')
+        configurations {
+            compile.exclude(group: 'javax.media', module: 'jai-core')
+            compile.exclude(group: 'com.sun.media', module: 'jai-codec')
+        }
+        compile(group: 'javax.media.jai', name: 'com.springsource.javax.media.jai.core', version: '1.1.3')
         compile(group: "org.apache.xmlgraphics", name: "fop", version: "2.3")
         compile(group: "org.apache.xmlgraphics", name: "xmlgraphics-commons", version: "2.3")
         compile(group: "org.plutext", name: "jaxb-svg11", version: "1.0.2")
