--- a/core/build.gradle
+++ b/core/build.gradle
@@ -224,6 +224,7 @@ configure(core) {
             exclude(group: 'bouncycastle', module: 'bctsp-jdk14')
         }
         compile(group: 'org.apache.poi', name: 'poi', version: '4.1.1')
+        compile(group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.1')
         compile(group: 'org.apache.poi', name: 'poi-scratchpad', version: '4.1.1') {
             exclude(group: 'org.apache.poi', module: 'poi')
         }
