--- a/core/build.gradle
+++ b/core/build.gradle
@@ -183,7 +183,7 @@ configure(core) {
         compile(api)
         compile(group: 'commons-logging', name: 'commons-logging', version: '1.2')
         compile(group: 'org.apache.commons', name: 'commons-lang3', version: '3.9')
-        compile(group: 'commons-io', name: 'commons-io', version: '2.6')
+        compile(group: 'commons-io', name: 'commons-io', version: '2.11.0')
         compile(group: 'org.dom4j', name: 'dom4j', version: '2.1.3') {
             exclude (group: 'xpp3', module: 'xpp3')
             exclude (group: 'pull-parser', module: 'pull-parser')
@@ -204,17 +204,17 @@ configure(core) {
             compile.exclude(group: 'com.sun.media', module: 'jai-codec')
         }
         compile(group: 'javax.media.jai', name: 'com.springsource.javax.media.jai.core', version: '1.1.3')
-        compile(group: "org.apache.xmlgraphics", name: "fop", version: "2.3")
-        compile(group: "org.apache.xmlgraphics", name: "xmlgraphics-commons", version: "2.3")
+        compile(group: "org.apache.xmlgraphics", name: "fop", version: "2.7")
+        compile(group: "org.apache.xmlgraphics", name: "xmlgraphics-commons", version: "2.7")
         compile(group: "org.plutext", name: "jaxb-svg11", version: "1.0.2")
         compile(group: "org.plutext", name: "jaxb-xslfo", version: "1.0.1")
         compile(group: "org.plutext", name: "jaxb-xmldsig-core", version: "1.0.0")
-        compile(group: "org.apache.xmlgraphics", name: "batik-bridge", version: "1.10")
-        compile(group: "org.apache.xmlgraphics", name: "batik-svggen", version: "1.10")
-        compile(group: "org.apache.xmlgraphics", name: "batik-awt-util", version: "1.10")
-        compile(group: "org.apache.xmlgraphics", name: "batik-css", version: "1.10")
-        compile(group: "xalan", name: "xalan", version: "2.7.2")
-        compile(group: "xalan", name: "serializer", version: "2.7.2")
+        compile(group: "org.apache.xmlgraphics", name: "batik-bridge", version: "1.16")
+        compile(group: "org.apache.xmlgraphics", name: "batik-svggen", version: "1.16")
+        compile(group: "org.apache.xmlgraphics", name: "batik-awt-util", version: "1.16")
+        compile(group: "org.apache.xmlgraphics", name: "batik-css", version: "1.16")
+        compile(group: "xalan", name: "xalan", version: "2.7.3")
+        compile(group: "xalan", name: "serializer", version: "2.7.3")
         compile(group: "com.lowagie", name: "itext", version: "2.1.7") {
             exclude(group: 'org.bouncycastle', module: 'bctsp-jdk14')
             exclude(group: 'org.bouncycastle', module: 'bcprov-jdk14')
@@ -223,9 +223,9 @@ configure(core) {
             exclude(group: 'bouncycastle', module: 'bcprov-jdk14')
             exclude(group: 'bouncycastle', module: 'bctsp-jdk14')
         }
-        compile(group: 'org.apache.poi', name: 'poi', version: '4.1.1')
-        compile(group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.1')
-        compile(group: 'org.apache.poi', name: 'poi-scratchpad', version: '4.1.1') {
+        compile(group: 'org.apache.poi', name: 'poi', version: '5.2.3')
+        compile(group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.3')
+        compile(group: 'org.apache.poi', name: 'poi-scratchpad', version: '5.2.3') {
             exclude(group: 'org.apache.poi', module: 'poi')
         }
         compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.1.18')
@@ -241,9 +241,11 @@ configure(core) {
             exclude(group: 'junit', module: 'junit')
         }
         compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-rtl-support', version: '1.0.0')
-        compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-pdfbox', version: '1.0.0') {
+        compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-pdfbox', version: '1.0.10') {
             exclude(group: 'junit', module: 'junit')
         }
+        compile (group: 'com.ibm.icu', name: 'icu4j', version: '72.1')
+
         compile(group: "org.docx4j", name: "docx4j-JAXB-ReferenceImpl", version: "8.2.9") {
             exclude(group: 'junit', module: 'junit')
             exclude(group: 'log4j', module: 'log4j')
@@ -280,7 +282,7 @@ configure(core) {
         }
         compile(group: "net.sf.jasperreports", name: "jasperreports-fonts", version: "6.8.0")
 
-        testCompile(group: 'org.jmockit', name: 'jmockit', version: '1.15')
+        testCompile(group: 'org.jmockit', name: 'jmockit', version: '1.49')
         testCompile(group: 'junit', name: 'junit', version: '4.5')
         testCompile group: 'org.mockito', name: 'mockito-core', version: '3.2.4'
         testCompile(group: 'com.h2database', name: 'h2', version: '1.4.196')
