--- a/core/build.gradle
+++ b/core/build.gradle
@@ -183,8 +183,8 @@ configure(core) {
         compile(api)
         compile(group: 'commons-logging', name: 'commons-logging', version: '1.2')
         compile(group: 'org.apache.commons', name: 'commons-lang3', version: '3.9')
-        compile(group: 'commons-io', name: 'commons-io', version: '2.6')
-        compile(group: 'org.dom4j', name: 'dom4j', version: '2.1.3') {
+        compile(group: 'commons-io', name: 'commons-io', version: '2.15.1')
+        compile(group: 'org.dom4j', name: 'dom4j', version: '2.1.4') {
             exclude (group: 'xpp3', module: 'xpp3')
             exclude (group: 'pull-parser', module: 'pull-parser')
         }
@@ -193,7 +193,7 @@ configure(core) {
         compile(group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.12')
         compile(group: 'antlr', name: 'antlr', version: '2.7.7')
         compile(group: 'org.antlr', name: 'antlr-runtime', version: '3.2')
-        compile(group: 'org.freemarker', name: 'freemarker', version: '2.3.16')
+        compile(group: 'org.freemarker', name: 'freemarker', version: '2.3.32')
         compile(group: 'org.openoffice', name: 'juh', version: '3.0.0')
         compile(group: 'org.openoffice', name: 'ridl', version: '3.0.0')
         compile(group: 'org.openoffice', name: 'unoil', version: '3.0.0')
@@ -203,18 +203,14 @@ configure(core) {
             compile.exclude(group: 'javax.media', module: 'jai-core')
             compile.exclude(group: 'com.sun.media', module: 'jai-codec')
         }
-        compile(group: 'javax.media.jai', name: 'com.springsource.javax.media.jai.core', version: '1.1.3')
-        compile(group: "org.apache.xmlgraphics", name: "fop", version: "2.3")
-        compile(group: "org.apache.xmlgraphics", name: "xmlgraphics-commons", version: "2.3")
+        //compile(group: 'javax.media.jai', name: 'com.springsource.javax.media.jai.core', version: '1.1.3')
+        compile(group: "org.apache.xmlgraphics", name: "fop", version: "2.9")
+        compile(group: "org.apache.xmlgraphics", name: "xmlgraphics-commons", version: "2.9")
         compile(group: "org.plutext", name: "jaxb-svg11", version: "1.0.2")
         compile(group: "org.plutext", name: "jaxb-xslfo", version: "1.0.1")
         compile(group: "org.plutext", name: "jaxb-xmldsig-core", version: "1.0.0")
-        compile(group: "org.apache.xmlgraphics", name: "batik-bridge", version: "1.10")
-        compile(group: "org.apache.xmlgraphics", name: "batik-svggen", version: "1.10")
-        compile(group: "org.apache.xmlgraphics", name: "batik-awt-util", version: "1.10")
-        compile(group: "org.apache.xmlgraphics", name: "batik-css", version: "1.10")
-        compile(group: "xalan", name: "xalan", version: "2.7.2")
-        compile(group: "xalan", name: "serializer", version: "2.7.2")
+        compile(group: "xalan", name: "xalan", version: "2.7.3")
+        compile(group: "xalan", name: "serializer", version: "2.7.3")
         compile(group: "com.lowagie", name: "itext", version: "2.1.7") {
             exclude(group: 'org.bouncycastle', module: 'bctsp-jdk14')
             exclude(group: 'org.bouncycastle', module: 'bcprov-jdk14')
@@ -223,13 +219,13 @@ configure(core) {
             exclude(group: 'bouncycastle', module: 'bcprov-jdk14')
             exclude(group: 'bouncycastle', module: 'bctsp-jdk14')
         }
-        compile(group: 'org.apache.poi', name: 'poi', version: '4.1.1')
-        compile(group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.1')
-        compile(group: 'org.apache.poi', name: 'poi-scratchpad', version: '4.1.1') {
+        compile(group: 'org.apache.poi', name: 'poi', version: '4.1.2')
+        compile(group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.2')
+        compile(group: 'org.apache.poi', name: 'poi-scratchpad', version: '4.1.2') {
             exclude(group: 'org.apache.poi', module: 'poi')
         }
-        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.1.18')
-        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.1.18') {
+        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.1.22')
+        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.1.22') {
             exclude(group: 'org.bouncycastle', module: 'bctsp-jdk14')
             exclude(group: 'org.bouncycastle', module: 'bcprov-jdk14')
             exclude(group: 'org.bouncycastle', module: 'bcmail-jdk14')
@@ -237,13 +233,15 @@ configure(core) {
             exclude(group: 'bouncycastle', module: 'bcprov-jdk14')
             exclude(group: 'bouncycastle', module: 'bctsp-jdk14')
         }
-        compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-core', version: '1.0.0') {
+        compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-core', version: '1.0.10') {
             exclude(group: 'junit', module: 'junit')
         }
-        compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-rtl-support', version: '1.0.0')
-        compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-pdfbox', version: '1.0.0') {
+        compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-rtl-support', version: '1.0.10')
+        compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-pdfbox', version: '1.0.10') {
             exclude(group: 'junit', module: 'junit')
         }
+        compile (group: 'com.ibm.icu', name: 'icu4j', version: '74.2')
+
         compile(group: "org.docx4j", name: "docx4j-JAXB-ReferenceImpl", version: "8.2.9") {
             exclude(group: 'junit', module: 'junit')
             exclude(group: 'log4j', module: 'log4j')
@@ -263,11 +261,11 @@ configure(core) {
             exclude(group: 'org.slf4j', module: 'slf4j-log4j12')
             exclude(group: 'com.fasterxml.jackson.core')
         }
-        compile(group: "org.jsoup", name: "jsoup", version: "1.12.1")
+        compile(group: "org.jsoup", name: "jsoup", version: "1.17.2")
         compile(group: "com.jayway.jsonpath", name: "json-path", version: "2.4.0")
-        compile(group: "com.opencsv", name: "opencsv", version: "5.5.2")
+        compile(group: "com.opencsv", name: "opencsv", version: "5.7.1")
         compile group: 'org.olap4j', name: 'olap4j', version: '1.2.0'
-        compile(group: "net.sf.jasperreports", name: "jasperreports", version: "6.9.0") {
+        compile(group: "net.sf.jasperreports", name: "jasperreports", version: "6.19.1") {
             exclude(group: 'org.apache.lucene')
             exclude(group: 'commons-beanutils', module: 'commons-beanutils')
             exclude(group: 'com.google.zxing', module: 'core')
@@ -278,16 +276,16 @@ configure(core) {
             exclude(group: 'com.lowagie', module: 'itext')
             exclude(group: 'org.codehaus.castor', module: 'castor-xml')
         }
-        compile(group: "net.sf.jasperreports", name: "jasperreports-fonts", version: "6.8.0")
+        compile(group: "net.sf.jasperreports", name: "jasperreports-fonts", version: "6.20.6")
 
         testCompile(group: 'org.jmockit', name: 'jmockit', version: '1.15')
         testCompile(group: 'junit', name: 'junit', version: '4.5')
         testCompile group: 'org.mockito', name: 'mockito-core', version: '3.2.4'
         testCompile(group: 'com.h2database', name: 'h2', version: '1.4.196')
-        testCompile(group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3')
+        testCompile(group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.13')
         testCompile(group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4')
-        testCompile(group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.9.2')
-        testCompile(group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.9')
+        testCompile(group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.16.1')
+        testCompile(group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.16.1')
     }
 
     test {
