--- a/core/build.gradle
+++ b/core/build.gradle
@@ -183,17 +183,21 @@ configure(core) {
         compile(api)
         compile(group: 'commons-logging', name: 'commons-logging', version: '1.2')
         compile(group: 'org.apache.commons', name: 'commons-lang3', version: '3.9')
-        compile(group: 'commons-io', name: 'commons-io', version: '2.6')
-        compile(group: 'org.dom4j', name: 'dom4j', version: '2.1.3') {
+        compile(group: 'commons-io', name: 'commons-io', version: '2.18.0')
+        compile(group: 'org.dom4j', name: 'dom4j', version: '2.1.4') {
             exclude (group: 'xpp3', module: 'xpp3')
             exclude (group: 'pull-parser', module: 'pull-parser')
         }
-        compile(group: 'com.google.guava', name: 'guava', version: '28.0-jre')
-        compile(group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26')
-        compile(group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.12')
+        compile(group: 'com.google.guava', name: 'guava', version: '33.3.1-jre') {
+            attributes{
+                attribute(Attribute.of("org.gradle.jvm.environment", String),"standard-jvm")
+            }
+        }
+        compile(group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36')
+        compile(group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.21')
         compile(group: 'antlr', name: 'antlr', version: '2.7.7')
         compile(group: 'org.antlr', name: 'antlr-runtime', version: '3.2')
-        compile(group: 'org.freemarker', name: 'freemarker', version: '2.3.16')
+        compile(group: 'org.freemarker', name: 'freemarker', version: '2.3.33')
         compile(group: 'org.openoffice', name: 'juh', version: '3.0.0')
         compile(group: 'org.openoffice', name: 'ridl', version: '3.0.0')
         compile(group: 'org.openoffice', name: 'unoil', version: '3.0.0')
@@ -204,17 +208,13 @@ configure(core) {
             compile.exclude(group: 'com.sun.media', module: 'jai-codec')
         }
         compile(group: 'javax.media.jai', name: 'com.springsource.javax.media.jai.core', version: '1.1.3')
-        compile(group: "org.apache.xmlgraphics", name: "fop", version: "2.3")
-        compile(group: "org.apache.xmlgraphics", name: "xmlgraphics-commons", version: "2.3")
+        compile(group: "org.apache.xmlgraphics", name: "fop", version: "2.10")
+        compile(group: "org.apache.xmlgraphics", name: "xmlgraphics-commons", version: "2.10")
         compile(group: "org.plutext", name: "jaxb-svg11", version: "1.0.2")
         compile(group: "org.plutext", name: "jaxb-xslfo", version: "1.0.1")
         compile(group: "org.plutext", name: "jaxb-xmldsig-core", version: "1.0.0")
-        compile(group: "org.apache.xmlgraphics", name: "batik-bridge", version: "1.10")
-        compile(group: "org.apache.xmlgraphics", name: "batik-svggen", version: "1.10")
-        compile(group: "org.apache.xmlgraphics", name: "batik-awt-util", version: "1.10")
-        compile(group: "org.apache.xmlgraphics", name: "batik-css", version: "1.10")
-        compile(group: "xalan", name: "xalan", version: "2.7.2")
-        compile(group: "xalan", name: "serializer", version: "2.7.2")
+        compile(group: "xalan", name: "xalan", version: "2.7.3")
+        compile(group: "xalan", name: "serializer", version: "2.7.3")
         compile(group: "com.lowagie", name: "itext", version: "2.1.7") {
             exclude(group: 'org.bouncycastle', module: 'bctsp-jdk14')
             exclude(group: 'org.bouncycastle', module: 'bcprov-jdk14')
@@ -223,13 +223,13 @@ configure(core) {
             exclude(group: 'bouncycastle', module: 'bcprov-jdk14')
             exclude(group: 'bouncycastle', module: 'bctsp-jdk14')
         }
-        compile(group: 'org.apache.poi', name: 'poi', version: '4.1.1')
-        compile(group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.1')
-        compile(group: 'org.apache.poi', name: 'poi-scratchpad', version: '4.1.1') {
+        compile(group: 'org.apache.poi', name: 'poi', version: '4.1.2')
+        compile(group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.2')
+        compile(group: 'org.apache.poi', name: 'poi-scratchpad', version: '4.1.2') {
             exclude(group: 'org.apache.poi', module: 'poi')
         }
-        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.1.18')
-        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.1.18') {
+        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.1.22')
+        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.1.22') {
             exclude(group: 'org.bouncycastle', module: 'bctsp-jdk14')
             exclude(group: 'org.bouncycastle', module: 'bcprov-jdk14')
             exclude(group: 'org.bouncycastle', module: 'bcmail-jdk14')
@@ -237,37 +237,41 @@ configure(core) {
             exclude(group: 'bouncycastle', module: 'bcprov-jdk14')
             exclude(group: 'bouncycastle', module: 'bctsp-jdk14')
         }
-        compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-core', version: '1.0.0') {
+        compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-core', version: '1.0.10') {
             exclude(group: 'junit', module: 'junit')
         }
-        compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-rtl-support', version: '1.0.0')
-        compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-pdfbox', version: '1.0.0') {
+        compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-rtl-support', version: '1.0.10')
+        compile (group: 'com.openhtmltopdf', name: 'openhtmltopdf-pdfbox', version: '1.0.10') {
             exclude(group: 'junit', module: 'junit')
         }
-        compile(group: "org.docx4j", name: "docx4j-JAXB-ReferenceImpl", version: "8.2.9") {
+        compile (group: 'com.ibm.icu', name: 'icu4j', version: '74.2')
+        compile(group: "org.docx4j", name: "docx4j-JAXB-ReferenceImpl", version: "8.3.11") {
             exclude(group: 'junit', module: 'junit')
             exclude(group: 'log4j', module: 'log4j')
-            exclude(group: 'org.slf4j', module: 'slf4j-log4j12')
+            exclude(group: 'org.slf4j')
             exclude(group: 'com.fasterxml.jackson.core')
         }
-        compile(group: "org.docx4j", name: "docx4j-ImportXHTML", version: "8.0.0") {
+        compile(group: "org.docx4j", name: "docx4j-ImportXHTML", version: "8.3.11") {
             exclude(group: 'junit', module: 'junit')
             exclude(group: 'org.apache.poi', module: 'poi')
             exclude(group: 'log4j', module: 'log4j')
-            exclude(group: 'org.slf4j', module: 'slf4j-log4j12')
+            exclude(group: 'org.slf4j')
+            exclude(group: 'ch.qos.logback')
             exclude(group: 'com.fasterxml.jackson.core')
         }
-        compile(group: "org.docx4j", name: "docx4j-export-fo", version: "8.2.9") {
+        compile(group: "org.docx4j", name: "docx4j-export-fo", version: "8.3.11") {
             exclude(group: 'junit', module: 'junit')
             exclude(group: 'log4j', module: 'log4j')
-            exclude(group: 'org.slf4j', module: 'slf4j-log4j12')
+            exclude(group: 'org.slf4j')
             exclude(group: 'com.fasterxml.jackson.core')
         }
-        compile(group: "org.jsoup", name: "jsoup", version: "1.12.1")
-        compile(group: "com.jayway.jsonpath", name: "json-path", version: "2.4.0")
-        compile(group: "com.opencsv", name: "opencsv", version: "5.5.2")
+        compile(group: "org.jsoup", name: "jsoup", version: "1.18.2")
+        compile(group: "com.jayway.jsonpath", name: "json-path", version: "2.9.0") {
+            exclude(group: 'org.slf4j')
+        }
+        compile(group: "com.opencsv", name: "opencsv", version: "5.7.1")
         compile group: 'org.olap4j', name: 'olap4j', version: '1.2.0'
-        compile(group: "net.sf.jasperreports", name: "jasperreports", version: "6.9.0") {
+        compile(group: "net.sf.jasperreports", name: "jasperreports", version: "6.19.1") {
             exclude(group: 'org.apache.lucene')
             exclude(group: 'commons-beanutils', module: 'commons-beanutils')
             exclude(group: 'com.google.zxing', module: 'core')
@@ -278,16 +282,19 @@ configure(core) {
             exclude(group: 'com.lowagie', module: 'itext')
             exclude(group: 'org.codehaus.castor', module: 'castor-xml')
         }
-        compile(group: "net.sf.jasperreports", name: "jasperreports-fonts", version: "6.8.0")
+        compile(group: "net.sf.jasperreports", name: "jasperreports-fonts", version: "6.19.1")
+
+        compile(group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.18.2')
+        compile(group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.18.2')
 
         testCompile(group: 'org.jmockit', name: 'jmockit', version: '1.15')
-        testCompile(group: 'junit', name: 'junit', version: '4.5')
+        testCompile(group: 'junit', name: 'junit', version: '4.13.2')
         testCompile group: 'org.mockito', name: 'mockito-core', version: '3.2.4'
         testCompile(group: 'com.h2database', name: 'h2', version: '1.4.196')
-        testCompile(group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3')
+        testCompile(group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.13')
         testCompile(group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4')
-        testCompile(group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.9.2')
-        testCompile(group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.9')
+        testCompile(group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.18.2')
+        testCompile(group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.18.2')
     }
 
     test {
@@ -304,8 +311,19 @@ configure(server) {
         compile(api)
         compile(core)
         compile(console)
-        compile(group: 'com.sparkjava', name: 'spark-core', version: '2.6.0')
-        testCompile(group: 'junit', name: 'junit', version: '4.5')
+        compile(group: 'com.sparkjava', name: 'spark-core', version: '2.7.2')
+
+        compile('org.eclipse.jetty:jetty-server:9.4.56.v20240826')
+        compile('org.eclipse.jetty:jetty-webapp:9.4.56.v20240826')
+        compile('org.eclipse.jetty.websocket:websocket-client:9.4.56.v20240826')
+        compile('org.eclipse.jetty.websocket:websocket-server:9.4.56.v20240826')
+        compile('org.eclipse.jetty.websocket:websocket-servlet:9.4.56.v20240826')
+        compile('org.eclipse.jetty:jetty-servlets:9.4.56.v20240826')
+        compile('org.eclipse.jetty:jetty-annotations:9.4.56.v20240826')
+        compile('org.eclipse.jetty:apache-jsp:9.4.56.v20240826')
+        compile('org.eclipse.jetty:jetty-client:9.4.56.v20240826')
+
+        testCompile(group: 'junit', name: 'junit', version: '4.13.2')
     }
 
     mainClassName = "com.haulmont.yarg.server.ServerRunner"
@@ -338,9 +356,9 @@ configure(console) {
         compile(api)
         compile(core)
         compile(group: 'commons-cli', name: 'commons-cli', version: '1.2')
-        compile(group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3')
+        compile(group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.13')
         compile(group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4')
-        testCompile(group: 'junit', name: 'junit', version: '4.5')
+        testCompile(group: 'junit', name: 'junit', version: '4.13.2')
     }
 
     mainClassName = "com.haulmont.yarg.console.ConsoleRunner"
